<resources>
    <string name="app_name">Chat Closer</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="emotion">\ud83d\ude01</string>
    <dimen name="imageSizeW">32dp</dimen>
    <dimen name="imageSizeH">32dp</dimen>
    <string name="facebook_app_id">1070098373125698</string>
    <string name="fb_login_protocol_scheme">fb1070098373125698</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
